Strip mining not working for test/hotspot/jtreg/compiler/c2/Test6850611.java

XMLWordPrintable

    • b18

      I notice we got over a second reaching safepoint with this test.
      I don't see how that would be possible if it was proper strip mined.

      E.g.
       jtreg -va -retain -javaoptions:"-Xlog:safepoint -XX:+UseG1GC -XX:+UseCountedLoopSafepoints -XX:LoopStripMiningIter=1000 -XX:LoopStripMiningIterShortLoop=100" -testjdk:build/linux-x86_64-server-fastdebug/images/jdk/ open/test/hotspot/jtreg/compiler/c2/Test6850611.java

      (options is not needed as they are also default, except log)

      [2.215s][info][safepoint] Safepoint "Cleanup", Time since last: 1101783997 ns, Reaching safepoint: 1039624721 ns, At safepoint: 29953 ns, Total: 1039654674 ns
      [4.326s][info][safepoint] Safepoint "Cleanup", Time since last: 1000438383 ns, Reaching safepoint: 1110582065 ns, At safepoint: 15462 ns, Total: 1110597527 ns

      Note that this is fastdebug.

            Assignee:
            Roland Westrelin
            Reporter:
            Robbin Ehn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: