8241492: Strip mining not working for test/hotspot/jtreg/compiler/c2/Test6850611.java

Reviewed-by: mdoerr, thartmann, neliasso